--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 
 <body background="background.jpg">
 <center>
-<h1 class="btn btn-warning heading">AI VIDEO SURVEILLANCE
-    <br>
-    The Input NameWhich You Will Give Should Match The Names Present In The CoCo Model Then Only It Will Detect 
-</h1>
-  <br><br>
-  <h4>Object Name:</h4>
-  <input type="text" placeholder="Put Object Which Are Present In The CoCo Model" id="object">
+<h1 class="btn btn-info heading">AI VIDEO SURVEILLANCE</h1>
+  <br>
+  <h3 class="btn btn-link">The Input Name Which You Will Give Should Match The Names Present In The CoCo Model Then Only It Will Detect 
+  </h3>
+  <h4 style="color: black;">Object Name:</h4>
+  <input type="text" placeholder="Input Object Name" id="object">
   <button class="btn btn-primary" onclick="start()" id="start">Start</button>
-  <br><br>
+  <br>
   <h3 class="btn btn-warning" id="status"></h3>
-  <br><br>
+  <br>
   <h3 class="btn btn-info" id="number_of_objects"></h3>
   </h3>
 </center>
